--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@
   padding: 0;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Arial", sans-serif;
   width: 100%;
@@ -105,6 +109,8 @@ button {
 @media screen and (max-width: 599px) {
   .header {
     background-color: #000;
+    position: fixed !important;
+    transform: translateY(0) !important;
   }
 }
 .header.fixed {
@@ -124,6 +130,12 @@ button {
   padding-top: 25px;
   padding-bottom: 25px;
   align-items: center;
+}
+@media screen and (max-width: 1099px) {
+  .header__inner {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 }
 .header__logo {
   font-family: "Prata", sans-serif;
@@ -162,7 +174,7 @@ button {
   .header__nav {
     position: fixed;
     left: 0;
-    top: 80px;
+    top: 60px;
     z-index: 10;
     background-color: #000;
     padding: 20px;
